# ContrastCheck

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
contrast_check/: __init__.py  color_extractor.py  contrast_checker.py  main.py  ocr_extractor.py
examples/: simple_usage.py
tests/: test_color_extractor.py  test_contrast_checker.py  test_main.py  test_ocr_extractor.py
